--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1006,11 +1006,12 @@ form .container .photograph button:last-of-type {
     flex-basis: 56.25%;
   }
   video {
+    width: 100%;
     height: 100%;
   }
   .photograph .photograph-img {
-    width: 80%;
-    height: auto;
+    width: 100%;
+    height: 100%;
   }
   form .container {
     margin-top: 174px;
