--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1008,6 +1008,7 @@ form .container .photograph button:last-of-type {
   video {
     width: 100%;
     height: 100%;
+    transform: rotateY(180deg);
   }
   .photograph .photograph-img {
     width: 100%;
@@ -1489,11 +1490,11 @@ form .container .photograph button:last-of-type {
   }
 }
 
-/* video {
+video {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg); /* Safari and Chrome */
-/* -moz-transform: rotateY(180deg); Firefox */
-/* } */
+  -moz-transform: rotateY(180deg); /*Firefox */
+}
 
 canvas {
   object-fit: contain;
