--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1009,6 +1009,8 @@ form .container .photograph button:last-of-type {
     width: 100%;
     height: 50%;
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg); /* Safari and Chrome */
+    -moz-transform: rotateY(180deg); /*Firefox */
   }
   .photograph .photograph-img {
     width: 100%;
