--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1004,15 +1004,12 @@ form .container .photograph button:last-of-type {
 
   .photograph {
     flex-basis: 56.25%;
-    transform: rotateY(180deg);
   }
   video {
-    width: 100%;
-    height: 50%;
+    object-fit: contain;
   }
   .photograph .photograph-img {
-    width: 100%;
-    height: 100%;
+    height: 24.73vw;
   }
   form .container {
     margin-top: 174px;
@@ -1489,11 +1486,16 @@ form .container .photograph button:last-of-type {
     top: 184px;
   }
 }
+@media (max-width: 500) and (min-width: 350) {
+  .photograph .photograph-img {
+    height: auto;
+  }
+}
 
 video {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg); /* Safari and Chrome */
-  -moz-transform: rotateY(180deg); /*Firefox */
+  -moz-transform: rotateY(180deg); /* Firefox */
 }
 
 canvas {
