--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1487,6 +1487,9 @@ form .container .photograph button:last-of-type {
   }
 }
 @media (max-width: 500px) and (min-width: 350px) {
+  .photograph {
+    height: 30px;
+  }
   .photograph .photograph-img {
     width: 60%;
     height: auto;
