--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1486,7 +1486,7 @@ form .container .photograph button:last-of-type {
     top: 184px;
   }
 }
-@media (max-width: 500px) and (min-width: 350px) {
+@media screen and (min-width: 350px) {
   .photograph {
     height: 30px;
   }
