--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1489,13 +1489,16 @@ form .container .photograph button:last-of-type {
 @media screen and (min-width: 350px) {
   .photograph {
     position: relative;
-    margin-top: 20px;
-    margin-left: 15%;
-    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    overflow: hidden;
   }
   .photograph .photograph-img {
-    width: 70%;
-    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
