--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1490,15 +1490,22 @@ form .container .photograph button:last-of-type {
   .photograph {
     position: relative;
     height: 0;
-    padding-bottom: 56.25%;
     overflow: hidden;
   }
-  .photograph .photograph-img {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .photograph video {
     width: 100%;
     height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .photograph canvas:first-of-type {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
   }
 }
 
