--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1493,6 +1493,7 @@ form .container .photograph button:last-of-type {
     overflow: hidden;
   }
   .photograph video {
+    position: absolute;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -1502,7 +1503,7 @@ form .container .photograph button:last-of-type {
   .photograph canvas:first-of-type {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
