--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1495,10 +1495,8 @@ form .container .photograph button:last-of-type {
   }
   .photograph video {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    width: 100% !important;
+    height: auto !important;
   }
   .photograph canvas:first-of-type {
     width: 100%;
