--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1486,25 +1486,16 @@ form .container .photograph button:last-of-type {
     top: 184px;
   }
 }
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 350px) {
   .photograph {
     position: relative;
     margin-top: 20px;
     margin-left: 15%;
     width: 100%;
   }
-  .photograph video {
-    position: absolute;
-    width: 100% !important;
-    height: auto !important;
-  }
-  .photograph canvas:first-of-type {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
+  .photograph .photograph-img {
+    width: 70%;
+    height: auto;
   }
 }
 
