--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1494,8 +1494,7 @@ form .container .photograph button:last-of-type {
     width: 70%;
   }
   .photograph video {
-    width: 70%;
-    height: auto;
+    transform: rotate(90deg);
   }
 }
 
