--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1495,11 +1495,11 @@ form .container .photograph button:last-of-type {
   }
   .photograph video {
     position: absolute;
-    /* transform: rotate(90deg); */
+    transform: rotate(90deg);
     transform-origin: center;
     object-fit: cover;
-    width: 100vh;
-    height: 100vw;
+    /* width: 100vh;
+    height: 100vw; */
   }
 }
 
